# test-bet-task

./: .gitignore  README.md  docker-compose.yml
betmaker/: .env.example  Dockerfile  main.py  pyproject.toml
betmaker/alembic/: env.py
betmaker/alembic/versions/: 98956928638c_initial_migrations.py
betmaker/src/api/: __init__.py
betmaker/src/api/common/: schemas.py
betmaker/src/api/v1/: __init__.py
betmaker/src/common/: time.py
betmaker/src/core/: config.py
betmaker/src/core/mapper/: __init__.py  base.py  generic.py
betmaker/src/core/repositories/: generic.py
betmaker/src/core/secret/: envs.py
betmaker/src/core/services/: __init__.py  base.py
betmaker/src/database/: __init__.py
betmaker/src/dependencies/: __init__.py
betmaker/src/modules/bets/: enums.py  exceptions.py  models.py
betmaker/src/modules/events/: enums.py  models.py
betmaker/tests/: __init__.py
betmaker/tests/integration/: fixtures.py
lineprovider/: main.py  pyproject.toml  run.sh
lineprovider/alembic/: env.py
lineprovider/alembic/versions/: fda28838e420_initial_migration.py
lineprovider/docker/worker/: Dockerfile
lineprovider/src/: jobs.py
lineprovider/src/api/v1/: router.py
lineprovider/src/common/: decorators.py  time.py  utils.py
lineprovider/src/core/: config.py
lineprovider/src/core/http/: __init__.py  base.py  client.py
lineprovider/src/core/jobs/: __init__.py  broker.py
lineprovider/src/core/mapper/: generic.py
lineprovider/src/core/secret/: __init__.py  (+1 more)
lineprovider/src/database/: connection.py  models.py
lineprovider/src/dependencies/: session.py
lineprovider/tests/integration/: fixtures.py
(+62 files in other folders)
