[tool.poetry]
name = "lineprovider"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
alembic = "^1.13.2"
dramatiq = "^1.17.0"
pydantic-settings = "^2.3.4"
pytz = "^2024.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
